# Fluxion

./: .env.example  .env.production.example  .gitignore  .railway-trigger  AGENTS.md  ARCHITECTURE.md  DEBUGGING.md  LICENSE  PROJECT_STRUCTURE.md  Procfile.dev  README.md  appcast.xml  architecture-diagram.html  dev.sh  justfile  nixpacks.toml  pyproject.toml  railway.toml  reasoner
.github/workflows/: release-macos.yml
assets/brand/: README.md
cli/: __init__.py  __main__.py  api_client.py  app.py  auth.py  config.py  events.py  permission.py
docs/: AGENT_ARCHITECTURE_RESEARCH.md  AGENT_CONTEXT_COMPARISON.md  AGENT_DESIGN.md  AGENT_IMPLEMENTATION_LOG.md  AGENT_MASTER_REFERENCE.md  AGENT_PROFILES_ARCHITECTURE.md  AGENT_REASONING_RESEARCH.md  AGENT_SYSTEM_DESIGN.md  API_REFERENCE.md  ARCHITECTURE.md  BENCHMARKS.md  CHATGPT_OAUTH_INTEGRATION.md  CLI_LANDSCAPE_RESEARCH.md  COMPONENTS.md  DATA_FLOW.md  DATA_MODELS.md  DEPRECATED_AGENT_CONVO_FULL.md  IMPLEMENTATION_LOG.md  OBSERVABILITY_AUDIT.md  RAILWAY_CLI.md  SYSTEM_DESIGN.md  SYSTEM_PROMPT_RESEARCH.md  WORKFLOW.md
orchestrator/: __init__.py  app.py  chat_config.yaml  config.py  conversation_titles.py  launcher.py  logging_config.py  reasoning_controls.py  runtime_paths.py  schemas.py  vision.py
scripts/: build_macos_app.sh  build_macos_tauri.sh  ensure_sparkle_framework.sh  install-cli.sh  install_local_service.sh  patch_sparkle_public_key.sh  sanity_test.sh  sync_brand_assets.sh  tauri-before-build.sh  tauri-before-dev.sh  test_loop.py  test_loop.sh  uninstall-cli.sh
site/: README.md  index.html  package.json  pnpm-lock.yaml
src-tauri/: Cargo.toml  Info.extend.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tests/: __init__.py  conftest.py  test_app_lifespan.py  test_forked_pipeline.py  test_performance.py  test_reasoning.py  test_reasoning_controls.py  test_reasoning_settings.py  test_runtime_packaging.py  test_ux.py  test_vision_inputs.py
ui/: index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
(+306 files in other folders)
