[project]
name = "reasoning-runtime"
version = "0.1.1"
description = "Local reasoning runtime with orchestrator API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "aiosqlite>=0.19.0",
    "sse-starlette>=2.0.0",
    "python-multipart>=0.0.6",
    "pyyaml>=6.0",
    "tiktoken>=0.5.0",
    "e2b-code-interpreter>=2.4.1",
    "openai-harmony>=0.0.8",
    "python-dotenv>=1.0.0",
    "daytona-sdk>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "honcho>=1.1.0",
]
benchmark = [
    "datasets>=2.14.0",
    "huggingface-hub>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orchestrator"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
