[package]
name = "fluxion"
version = "0.1.1"
description = "Fluxion desktop shell"
authors = ["Fluxion"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "fluxion_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "fluxion"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "unstable"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
ureq = { version = "3", default-features = false, features = ["json"] }
url = "2"

[target.'cfg(target_os = "macos")'.dependencies]
tauri-plugin-sparkle-updater = "0.2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
